--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,12 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.bg-radial-corner {
+  background: radial-gradient(
+    circle at top right,
+    rgba(212, 228, 255, 1) 0%,
+    rgba(150, 186, 255, 1) 50%,
+    rgba(188, 231, 249, 1) 100%
+  );
+}
